test/sema/typeck/expr/paren-infer-type-from-expected-err.dora
enum Box[T] {
    New(T),
}

fn test(): Box[Bool] {
    ((Box::New(1i32)))
}
